<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="16dp"
    android:elevation="0dp"
    app:cardBackgroundColor="@color/card_background"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="vertical">

        <!-- HEAD -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="94dp"
                android:layout_height="53dp"
                android:layout_marginEnd="13dp"
                app:cardCornerRadius="10dp">

                <ImageView
                    android:id="@+id/imageViewFlag"
                    android:layout_width="94dp"
                    android:layout_height="53dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ch_flag"
                    android:contentDescription="@string/flag_desc" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="199dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewCountry"
                    style="@style/TextViewCountryStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Kyrgyzstan" />

                <TextView
                    android:id="@+id/textViewListCapital"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/capitalColor"
                    android:textSize="16sp"
                    tools:text="Bishkek" />

            </LinearLayout>

            <ImageView
                android:id="@+id/buttonExpand"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/baseline_expand_more_24"
                android:contentDescription="@string/expand_button_desc" />

        </LinearLayout>

        <!-- ADDITIONAL -->

        <LinearLayout
            android:id="@+id/additional_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="vertical">

            <!-- ITEM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPopulationLabel"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/capitalColor"
                    android:textSize="17sp"
                    android:text="@string/population" />

                <TextView
                    android:id="@+id/textViewPopulation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="19 mln" />

            </LinearLayout>

            <!-- ITEM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewAreaLabel"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/capitalColor"
                    android:textSize="17sp"
                    android:text="@string/area"/>

                <TextView
                    android:id="@+id/textViewArea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="2.725 mln km²" />

            </LinearLayout>

            <!-- ITEM -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCurrenciesLabel"
                    android:visibility="visible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:textColor="@color/capitalColor"
                    android:textSize="17sp"
                    android:text="@string/currencies" />

                <TextView
                    android:id="@+id/textViewCurrencies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Tenge (₸) (KZT)" />

            </LinearLayout>

            <!-- BUTTON LEARN MORE -->
            <TextView
                android:id="@+id/texViewButtonLearnMore"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:letterSpacing="0.1"
                android:text="@string/learn_more_btn"
                android:textAllCaps="true"
                android:textColor="@color/buttonColor"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>